--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "url": ""
   },
   "dependencies": {
-    "@agio/framework": "^1.1.0",
+    "@agio/framework": "file:../agio-framework/dist/agio-framework-1.2.0.tgz",
     "joi": "^14.3.1",
     "lodash": "^4.17.11",
-    "mysql2": "^1.6.5",
+    "mysql2": "^2.1.0",
     "nodemon": "^1.19.0"
   },
   "devDependencies": {
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
+    "dev": "nodemon -e js,ts src/app.ts",
     "build": "rm -rf dist && tsc"
   }
 }
