--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "url": ""
     },
     "dependencies": {
-        "@agio/framework": "@agio/framework@1.2.0",
+        "@agio/framework": "1.2.0",
         "joi": "^14.3.1",
         "lodash": "^4.17.11",
         "mysql2": "^2.1.0",
